Name:                 miku
Version:              2014.11.17
Build-type:           Simple
Synopsis:             A minimum web dev DSL in Haskell
Description:

    A simple library for fast web prototyping in Haskell.

License:              BSD3
License-file:         LICENSE
Author:               Jinjing Wang
Maintainer:           Jinjing Wang <nfjinjing@gmail.com>
Cabal-version:        >= 1.2
category:             Web
homepage:             https://github.com/nfjinjing/miku
extra-doc-files:      readme.md, changelog.md, Nemesis, known-issues.md

library
  build-depends:      base > 4 && <= 6
                    , data-default
                    , hack2 >= 2012.1.19
                    , hack2-contrib >= 2012.1.19
                    , air >= 2014.5.19
                    , air-th
                    , mtl
                    , containers
                    , bytestring
                    -- for testing
                    , hack2-handler-snap-server
                    , foreign-store
                    , lens


  hs-source-dirs: src/
  exposed-modules:
                      Network.Miku
                      Network.Miku.Config
                      Network.Miku.DSL
                      Network.Miku.Engine
                      Network.Miku.Type
                      Network.Miku.Utils
