name:                 miku
category:             Web
version:              2016.9.19
cabal-version:        >= 1.6

license:              BSD3
license-file:         LICENSE

author:               Jinjing Wang
maintainer:           Jinjing Wang <nfjinjing@gmail.com>

build-type:           Simple
tested-with:          GHC == 8.0.1

synopsis:             A minimum web dev DSL
description:

    A simple library for fast web prototyping in Haskell.

homepage:             https://github.com/nfjinjing/miku
extra-doc-files:      readme.md, changelog.md, known-issues.md

source-repository head
  type: git
  location: git://github.com/nfjinjing/miku.git

library
  ghc-options:       -Wall -fno-warn-unused-do-bind
  hs-source-dirs: src vendor/http-pony/src vendor/http-pony-serve-wai/src

  build-depends:      
                        base > 4 && <= 6
                      , blaze-builder >= 0.4.0.1
                      , bytestring
                      , case-insensitive >= 1.2.0.5
                      , containers
                      , filepath >= 1.4.0.0
                      , http-types >= 0.9
                      , mtl
                      , wai
                      , wai-extra
                      , regex-pcre
                      -- for testing
                      -- , lens
                      -- , foreign-store
                      -- , moe
                      -- , warp

  exposed-modules:
                      Network.Miku
                      Network.Miku.Config
                      Network.Miku.DSL
                      Network.Miku.Engine
                      Network.Miku.Type
                      Network.Miku.Utils
